[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/servidorDesconectado.gd" type="Script" id=1]
[ext_resource path="res://clic.wav" type="AudioStream" id=2]
[ext_resource path="res://efecto de sonido de boton portal 2.wav" type="AudioStream" id=3]
[ext_resource path="res://src/mundo/fuente/Lets Coffee.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_left = -10.0
margin_top = 114.0
margin_right = -25.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 1 )
text = "EL HOST PARo EL SERVER!"
align = 1

[node name="volverMenu" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -79.0
margin_right = 113.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "VOLVER AL MENU"

[node name="quit" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = 79.0
margin_right = 112.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "SALIR"

[node name="Node2D" type="Node2D" parent="." groups=["sonidos"]]

[node name="click" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource( 2 )

[node name="click2" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource( 3 )

[connection signal="button_down" from="Panel/volverMenu" to="." method="_on_volverMenu_button_down"]
[connection signal="mouse_entered" from="Panel/volverMenu" to="." method="_on_volverMenu_mouse_entered"]
[connection signal="pressed" from="Panel/volverMenu" to="." method="_on_backToMenu_pressed"]
[connection signal="button_down" from="Panel/quit" to="." method="_on_quit_button_down"]
[connection signal="mouse_entered" from="Panel/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Panel/quit" to="." method="_on_quit_pressed"]
